agregada una a a texto de informacion del cuadro de resultados

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div id="resultados" class="resultados ajustes">
                     <img id="munheco" src="img/Muñeco.png" class="munheco" alt="Muñeco">
                     <textarea id="textoFinal" class="texto_Final ajustes" placeholder="Ningun mensaje fue encontrado"></textarea>
-                    <p id="ingTexto" class="ingreseTexto">Ingrese el texto que dese encriptar o desencriptar</p>
+                    <p id="ingTexto" class="ingreseTexto">Ingrese el texto que desea encriptar o desencriptar</p>
                     <button id="btnCopiar" class="botonCopiar">Copiar</button>
                 </div>
             </div>
