--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <main>
             <div class="cuadros">
                 <div class="encriptador">
-                    <textarea id="textoEntrada" class="areaTexto" placeholder="Ingrese el texto aqui" rows="10"></textarea>
+                    <textarea id="textoEntrada" class="areaTexto" placeholder="Ingrese el texto aquí" rows="10"></textarea>
                     <div class="areaEncriptador">
                         <img src="img/Group.png" alt="circulo de advertencia">
                         <span class="info">Solo letras minusculas y sin acentos</span>
